# projet_titanic_test

./: Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: survival_rates.csv
docs/: mkdocs.yml
docs/docs/: index.md
docs/source/: conf.py  index.rst  modules.rst  titanic_project.rst
tests/: test_preprocessing.py  test_training.py
titanic_project/: __init__.py  data_preprocessing.py  model_evaluation.py  model_training.py  titanic-tutorial.ipynb
