[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic_project"
version = "0.0.1"
description = "first tianic project"
authors = [
  { name = "Manohy, Nathan, Camille, Assia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["titanic_project"]
force_sort_within_sections = true


